[package]
name = "psctl"
version = "0.2.0"
edition = "2021"
description = "An operator for local processes"
repository = "https://github.com/bww/psctl"
readme = "README.md"
license = "BSD-3-Clause"

[dependencies]
clap = { version="3.1", features=["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11" }
futures = { version = "0.3.26" }
url = { version = "2.3.1" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
colored = "2.0.0"
