[package]
name = "psctl"
version = "0.3.3"
edition = "2021"
description = "An operator for local processes"
repository = "https://github.com/bww/psctl"
readme = "README.md"
license = "BSD-3-Clause"

[dependencies]
clap = { version = "3.1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11" }
futures = { version = "0.3.26" }
url = { version = "2.3.1" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
colored = "2.0.0"
nix = "0.26.2"
ctrlc = "3.4"

[target.x86_64-apple-darwin]
linker = "x86_64-apple-darwin21.4-clang"
ar = "x86_64-apple-darwin21.4-ar"
